docs/specifications/v1.0/requirements.md
# Content to Editable PPT Skill 需求规格说明 v1.0

## 1. 文档目的

本文档用于定义 `Content to Editable PPT Skill` 的产品需求、目标用户、核心使用场景、功能边界、质量优先级和验收方向。

本文档回答的是：

> 这个 Skill 应该解决什么问题、提供什么能力、达到什么结果。

本文档不规定：

- 具体脚本名称；
- 目录结构；
- JSON Schema 细节；
- Agent YAML 配置；
- 具体模型型号；
- Prompt 实现；
- PowerPoint 合并技术；
- Runtime 内部状态字段。

上述内容属于功能规格、架构设计和详细实现阶段。

---

# 2. 项目定位

`Content to Editable PPT Skill` 是面向 Claude Code、Codex 等 AI Coding Agent / Agent Runtime 使用的 PowerPoint 制作 Skill。

它不是：

- 独立 PowerPoint 软件；
- Web 应用；
- 桌面 GUI；
- SaaS 平台；
- 独立 Agent 服务。

最终用户通过自然语言向 Claude Code、Codex 或具备类似能力的 Agent 提出 PowerPoint 制作要求，由宿主 Agent 加载并执行本 Skill 所定义的工作流。

基本关系：

```text
最终用户
↓
Claude Code / Codex / 其他兼容 Agent
↓
Content to Editable PPT Skill
↓
规划、设计、构建、审核
↓
最终 PowerPoint
```

Skill 应尽可能保持 Agent 平台无关，不将核心流程绑定到某一个特定 Agent 产品。

---

# 3. 项目目标

本 Skill 主要解决当前 AI 直接生成 PowerPoint 时的三个核心问题。

## 3.1 用户难以控制 PPT 的内容结构

现有 AI PPT 生成方式通常从材料直接生成最终页面，用户难以按照自己的思路控制：

- 内容取舍；
- 页面顺序；
- 叙事逻辑；
- 每页重点；
- 汇报节奏。

本 Skill 应先让 AI 理解材料并生成候选大纲，再通过与用户交流确认最终大纲。

确认后的大纲应成为后续 PPT 制作的内容基准。

## 3.2 缺少独立的页面布局规划过程

现有 AI PPT 生成往往从文字直接进入最终页面，缺少独立的布局设计阶段。

本 Skill 应在大纲确认后，对页面进行：

- 信息分区；
- 层级规划；
- 内容密度控制；
- 视觉重心设计；
- 页面布局规划。

线稿 / Wireframe 阶段属于第一版必须具备的能力。

## 3.3 最终页面视觉质量不足

现有 AI 自动生成 PPT 容易出现：

- 排版普通；
- 页面单调；
- 信息堆叠；
- 视觉层级弱；
- 风格不统一；
- 缺少专业设计感。

本 Skill 应在布局规划基础上生成正式页面视觉设计，并将设计图进一步重建为可编辑 PowerPoint。

---

# 4. 核心产品理念

传统 AI PPT：

```text
材料
→ AI直接生成PPT
```

本 Skill：

```text
材料 + 用户要求
→ AI理解与组织
→ 候选大纲
→ 与用户交流
→ 用户确认大纲
→ 布局规划
→ 页面视觉设计
→ 生成页面设计图
→ 转换为可编辑PPT
→ PowerPoint实际渲染
→ 独立视觉审核
→ 必要修订
→ 最终交付
```

核心目标不是单纯“一键生成”，而是：

> 让 Claude Code、Codex 等 Agent 按照“内容规划 → 布局规划 → 视觉设计 → 可编辑重建 → 视觉审核”的专业流程制作 PowerPoint，同时保留用户对内容结构和最终设计的控制权。

---

# 5. 目标使用者

## 5.1 直接使用者

本 Skill 的直接使用者为具备以下能力的 AI Coding Agent / Agent Runtime：

- 读取本地文件；
- 执行命令；
- 管理工作目录；
- 调用模型或工具；
- 与用户进行自然语言交互；
- 根据 Skill 文档执行多阶段任务。

典型环境包括：

- Claude Code；
- Codex；
- 其他具备类似能力的 Agent。

## 5.2 最终用户

最终用户不需要理解：

- Schema；
- Agent 配置；
- Runtime；
- 脚本；
- 状态文件；
- 内部工作目录。

最终用户只需要：

1. 提供材料；
2. 说明 PPT 要求；
3. 对关键阶段结果进行确认或修改；
4. 获取最终交付结果。

---

# 6. 核心使用场景

## 6.1 材料生成完整 PPT

用户向 Agent 提供：

- 文本；
- DOCX；
- PDF；
- 图片；
- 其他相关文件资料；

并说明 PowerPoint 的用途、内容和视觉要求。

Skill 应完成：

```text
材料理解
→ 大纲
→ 布局
→ 视觉设计
→ 可编辑PPT
```

## 6.2 图片转可编辑 PPT

图片转可编辑 PPT 是本 Skill 的核心底层能力。

用户提供一张或多张页面图片后，Skill 应尽可能将其重建为：

- 可编辑文字；
- 可编辑基础形状；
- 可编辑线条和箭头；
- 可编辑主要页面结构；
- 必要时保留复杂图片资产。

## 6.3 用户提供视觉要求生成 PPT

用户可以指定：

- 风格；
- 配色；
- 字体；
- 页面比例；
- 模板；
- 参考设计；
- 参考图片；
- 其他视觉要求。

Skill 应优先遵循用户要求。

---

# 7. 支持的用户输入

Skill 应能够接受用户提供的相关材料和要求，包括但不限于：

## 7.1 内容材料

- 直接文本；
- DOCX；
- PDF；
- 图片；
- 其他能够被宿主 Agent读取的资料。

## 7.2 PPT 要求

- PPT 主题；
- 用途；
- 受众；
- 页数；
- 汇报时间；
- 内容重点；
- 必须保留的内容；
- 内容禁区。

## 7.3 视觉要求

- 页面比例；
- 字体；
- 字号；
- 配色；
- 风格；
- 模板；
- 参考图片；
- 参考 PPT；
- 页面设计偏好。

Skill 不应要求用户预先把材料整理成内部技术格式。

---

# 8. 核心输出

第一版至少需要输出以下三类结果。

## 8.1 大纲文档

内容包括：

- PPT 标题；
- 核心主题；
- 页面顺序；
- 每页标题；
- 每页核心信息；
- 主要内容点。

大纲必须经过用户确认。

## 8.2 页面设计图片文件集

每页应有对应的视觉设计图。

页面设计图片用于：

- 用户查看最终视觉方案；
- 用户确认或修改页面设计；
- 作为可编辑 PPT 重建的视觉基准；
- 与最终 PowerPoint 渲染结果进行视觉比较。

## 8.3 最终可编辑 PowerPoint

最终输出 `.pptx` 文件。

PPT 应能够：

- 使用 Microsoft PowerPoint 正常打开；
- 正常保存；
- 正常重新渲染；
- 编辑主要文字；
- 编辑主要页面结构；
- 保持设计图的主要视觉效果。

---

# 9. 第一版必须具备的能力

MVP 必须覆盖完整流程，而不是只实现其中某个局部阶段。

```text
材料读取
↓
材料理解
↓
候选大纲生成
↓
用户确认大纲
↓
线稿 / 布局规划
↓
页面视觉设计
↓
页面设计图生成
↓
图片转可编辑PPT
↓
视觉审核
↓
必要修订
↓
多页整合
↓
最终PPT交付
```

其中以下能力均属于 MVP 必须能力：

- 大纲生成；
- 大纲确认；
- Wireframe / 布局规划；
- 页面视觉设计；
- 页面设计图生成；
- 图片转可编辑 PPT；
- Visual Reviewer；
- 多页 PPT 整合；
- 最终交付。

具体某个阶段由宿主 Agent、大模型、专用 Agent 或图片生成工具完成，属于技术实现问题，不影响其作为产品功能存在。

---

# 10. 大纲需求

## 10.1 AI 可以理解和重组材料

AI 默认允许：

- 总结；
- 改写；
- 重组；
- 压缩；
- 调整内容顺序；
- 增加必要的过渡表达；
- 根据已有材料进行合理解释。

## 10.2 大纲必须经过用户确认

AI 生成的第一版大纲只能作为候选大纲。

正式流程：

```text
材料
↓
AI理解与整理
↓
候选大纲
↓
与用户交流
↓
根据用户意见修改
↓
用户确认
↓
Approved Outline
```

用户确认后的大纲成为后续：

- Wireframe；
- 页面设计；
- PPT 构建；

的内容基准。

## 10.3 禁止未经授权补充关键外部事实

默认不允许：

- 捏造事实；
- 捏造数字；
- 捏造引用；
- 捏造结论；
- 未经允许引入影响内容判断的关键外部事实。

需要外部研究或补充重要外部信息时，应先获得用户授权。

用户明确要求外部研究时，以用户要求为准。

---

# 11. 用户确认策略

采用：

> 大纲必须确认，后续阶段灵活确认。

## 11.1 必须确认

以下阶段必须获得用户确认：

```text
候选大纲
→ 用户确认
→ Approved Outline
```

未确认大纲不得正式进入后续完整 PPT 制作。

## 11.2 灵活确认

以下阶段是否停下来确认，应根据用户要求和任务情况灵活决定：

- Wireframe；
- 代表性视觉样张；
- 全部页面设计图。

Agent 可以根据：

- 任务复杂度；
- 页面数量；
- 用户要求；
- 修改风险；

决定是否建议用户确认。

用户也可以明确要求：

> 不需要逐阶段确认，直接继续。

Skill 不应将所有阶段设计成强制人工审批流程。

---

# 12. 视觉风格需求

## 12.1 用户要求优先

用户明确提出以下要求时必须优先遵循：

- 风格；
- 模板；
- 配色；
- 字体；
- 页面比例；
- 参考设计；
- 页面布局要求。

## 12.2 AI 在未规定部分具有设计自主权

当用户没有明确规定某些视觉属性时，AI 可以根据：

- PPT 主题；
- 内容性质；
- 使用场景；
- 主要受众；

选择合理的设计方案。

原则：

> 用户要求优先，AI 在用户未规定部分拥有设计自主权。

---

# 13. 可编辑性要求

采用：

> 标准 B：文字和主要结构可编辑。

## 13.1 必须原生可编辑

以下内容应优先使用 PowerPoint 原生对象：

- 主要文字；
- 标题；
- 正文；
- 常规矩形；
- 圆形；
- 基础几何形状；
- 线条；
- 箭头；
- 流程关系；
- 适合原生表达的表格；
- 适合原生表达的基础图表。

## 13.2 可以保留为图片的内容

以下内容允许使用图片资产：

- 照片；
- 复杂艺术插图；
- 复杂纹理；
- 难以可靠原生重建的复杂视觉元素。

## 13.3 禁止行为

禁止：

> 使用整页截图或整页栅格背景冒充“可编辑 PowerPoint”。

不能为了追求像素级一致性而牺牲主要文字和主要结构的可编辑性。

---

# 14. 视觉质量要求

最终 PPT 不应只满足“能够打开”。

还应尽可能满足：

- 页面布局合理；
- 内容层级清晰；
- 页面密度适当；
- 字体层级明确；
- 配色协调；
- 页面风格统一；
- 视觉重心明确；
- 主要元素比例合理；
- 页面之间保持一致的设计语言；
- 最终 PPT 与确认后的页面设计图保持较高视觉一致性。

---

# 15. Visual Reviewer 需求

最终 PPT 必须经过独立视觉审核。

基本流程：

```text
确认后的页面设计图
+
PowerPoint实际渲染图
↓
Visual Reviewer
↓
通过 / 修订
```

Visual Reviewer 应与负责页面重建的 Planner 职责分离。

Reviewer 至少应关注：

- 页面整体布局；
- 主要元素比例；
- 文字层级；
- 连接线与箭头关系；
- 图片裁切；
- 背景拼接问题；
- 视觉深度；
- 页面设计图与 PPT 渲染图之间的明显差异。

为了提升性能，可以优化 Reviewer 的输入、输出和修订流程，但不能为了单纯提速取消最终视觉审核。

---

# 16. 质量优先级

正式质量优先级为：

```text
内容准确性
>
可编辑性
>
视觉质量
>
运行速度
```

## 16.1 内容准确性优先

不得为了：

- 更漂亮；
- 更简洁；
- 更容易排版；

而改变关键事实、数字或用户确认后的核心内容。

## 16.2 可编辑性优先于完全视觉复刻

在视觉完全一致与主要结构可编辑发生冲突时，应优先保证主要内容可编辑。

## 16.3 视觉质量优先于纯粹提速

不能为了缩短运行时间而取消必要的：

- 布局规划；
- 视觉设计；
- Visual Reviewer；
- 必要修订。

## 16.4 运行时间仍应尽量优化

性能优化应重点删除：

- 不产生质量收益的重复 Planner 调用；
- 技术错误导致的重新规划；
- 局部问题导致的整页重做；
- 已通过阶段的无意义重复执行；
- 不必要的等待；
- 不必要的重复资产处理。

原则：

> 有效的质量修订可以增加时间，无效的重复流程必须尽量消除。

---

# 17. 稳定性与错误处理要求

Skill 不应因为单个技术问题无限循环。

至少应满足以下需求：

- 技术故障不应自动导致内容重新规划；
- 局部问题应优先局部修复；
- 已成功且输入未变化的阶段应尽可能复用；
- 不允许无限 Agent 修订循环；
- 运行过程应能够识别主要失败阶段；
- 失败应有明确原因；
- 用户不应长时间等待无意义的重复处理。

具体 Retry、Patch、Resume 和状态管理规则由 Runtime 设计文档定义。

---

# 18. 平台兼容性要求

本 Skill 应优先支持 Claude Code、Codex 等具备以下能力的 Agent：

- 文件系统访问；
- shell / command execution；
- 模型调用；
- 图片理解或图片生成能力；
- 用户交互能力。

核心工作流不应绑定到某一个 Agent 产品的私有对话状态或专有 UI。

不同 Agent 可以使用不同模型和工具完成同一功能阶段，只要满足 Skill 规定的输入、输出和质量要求。

---

# 19. 非目标范围

第一版不要求开发：

- 独立 Web 前端；
- 独立桌面 GUI；
- 用户账号体系；
- 数据库；
- 云端任务队列；
- 通用 Agent 编排平台；
- 通用文档数据库；
- 实时多人协作；
- PowerPoint 在线编辑器；
- 独立审批系统；
- 自研大语言模型；
- 自研图片生成模型。

本项目核心是 Skill，而不是完整软件平台。

---

# 20. 成功标准

第一版可以被认为满足核心需求，应至少达到：

1. Claude Code、Codex 等兼容 Agent 能读取并执行 Skill；
2. 用户能够提供文件资料和 PPT 要求；
3. AI 能够根据材料生成候选大纲；
4. 大纲能够通过与用户交流修改并最终确认；
5. 确认后的大纲能够进入布局规划阶段；
6. 每页能够形成明确的页面视觉设计；
7. 能够输出完整的页面设计图片文件集；
8. 页面设计能够被重建为可编辑 PowerPoint；
9. 主要文字和主要结构保持可编辑；
10. 不使用整页截图冒充可编辑 PPT；
11. 最终 PPT 能够由 Microsoft PowerPoint 正常打开、保存和渲染；
12. 最终 PPT 经过独立 Visual Reviewer 审核；
13. 多页能够正确整合成完整 PPT；
14. 最终至少交付大纲文档、设计图片文件集和可编辑 PPTX；
15. 在不降低内容准确性、可编辑性和视觉质量的前提下，尽可能减少重复和无效流程。

---

# 21. 需求优先级总结

## P0：核心需求

- 内容准确；
- 用户能够控制和确认大纲；
- 页面存在正式布局规划；
- 页面具有正式视觉设计；
- 主要文字与结构可编辑；
- 图片能够转换为可编辑 PPT；
- 必须经过视觉审核；
- 能够输出完整多页 PPT。

## P1：重要需求

- 风格统一；
- 用户要求优先；
- 支持参考视觉风格；
- 支持灵活用户确认；
- 减少无效 Agent 调用；
- 减少无意义重复构建；
- 提升失败恢复效率。

## P2：优化需求

- 更快的平均运行速度；
- 更低模型调用成本；
- 更多 Agent Runtime 兼容；
- 更复杂的页面设计类型；
- 更自动化的多页一致性审核。

---

# 22. 最终需求定义

`Content to Editable PPT Skill` 的第一版目标可以概括为：

> 为 Claude Code、Codex 等 AI Coding Agent 提供一套完整的 PowerPoint 制作 Skill，使其能够基于用户提供的材料和要求，通过用户参与的大纲确认、页面布局规划、视觉设计、可编辑页面重建和独立视觉审核，最终生成内容准确、主要结构可编辑且具有良好视觉质量的完整 PowerPoint 演示文稿。
